kubernetes/apps/default/all-ports-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: untitled-policy
  namespace: default
spec:
  endpointSelector: {}
