kubernetes/apps/default/l7-visibility-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l7-visibility-all"
  namespace: default
spec:
  endpointSelector: {}
  ingress:
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
          rules:
            http: [{}]
  egress:
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "5432"
              protocol: TCP
          rules:
            http: [{}]
