kubernetes/apps/default/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-with-visibility
  namespace: default
spec:
  endpointSelector: { } # Apply to all pods in the default namespace
  egress:
    - toEntities:
        - all
      icmps:
        - fields:
            - type: 8
            - type: 0
    - toEntities:
        - all # Allow egress to external destinations
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "8081" # arr apps to qbittorrent
              protocol: TCP
          rules:
            http: [{}]
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    # Allow traffic to Istio sidecar ports
    - toPorts:
        - ports:
            - port: "15001"
              protocol: TCP
            - port: "15006"
              protocol: TCP
            - port: "15010"
              protocol: TCP
            - port: "15012"
              protocol: TCP
            - port: "15014"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-ingress-istio-l7-policy
  namespace: network # Adjust the namespace if needed
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/instance: ingress-nginx-internal
  ingress:
    # Allow traffic from the external world (e.g., the internet) on ports 80 and 443
    - fromEntities:
        - world # This allows ingress traffic from the internet
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    # Allow traffic from Istio sidecar (internal mesh traffic)
    - fromEndpoints:
        - matchLabels:
            app: istio-proxy # Targeting Istio sidecar for ingress
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
          rules:
            http:
              - method: GET
                path: "/.*" # Allow all GET requests
              - method: POST
                path: "/.*" # Allow all POST requests
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "10254"
              protocol: TCP
  egress:
    - toEntities:
        - all
    - toEndpoints:
        - matchLabels:
            istio: sidecar-proxy # Ensuring traffic goes to the Istio sidecar
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toPorts:
        - ports:
            - port: "15006"
              protocol: TCP
          rules:
            http:
              - path: "/.*" # Visibility for HTTP requests through Istio sidecars
                method: GET
              - path: "/.*"
                method: POST
